--- a/main/index.html
+++ b/main/index.html
@@ -27,9 +27,9 @@
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
-        <div class="box">
+        <!-- <div class="box">
           <input type="text">Search
-        </div>
+        </div> -->
       </div>
     </div>
 
