--- a/main/index.html
+++ b/main/index.html
@@ -7,10 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/1.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+DE+Grund:wght@100..400&family=Playwrite+ES+Deco:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+DE+Grund:wght@100..400&family=Playwrite+ES+Deco:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -30,10 +27,28 @@
     </header>
     <div class="main">
       <div id="home" class="home">
-        <h2>This is home page</h2>
+        <div class="home_left">
+          <img src="Images/1.jpg" alt="home_image" />
+        </div>
+        <div class="home_right">
+          <p>Hi Everyone!</p>
+          <h2>We are mainly developers working for renouned MNCs</h2>
+          <h2>Started freelancing in the free time</h2>
+        </div>
       </div>
       <div id="about" class="about">
         <h2>This is about page</h2>
+        <div class="about_left">
+          <h2>We mainly deal with:</h2>
+          <ul>
+            <li>Web Development</li>
+            <li>Photo & Video Editing</li>
+            <li>SEO Management</li>
+            <li>Data Analysis</li>
+            </ul>
+          </ul>
+        </div>
+        <div class="about_right"></div>
       </div>
       <div id="services" class="services">
         <h2>This is services page</h2>
@@ -62,7 +77,8 @@
           <li>
             <a
               href="https://www.instagram.com"
-              target="_blank" class="instagram"
+              target="_blank"
+              class="instagram"
               ><i class="fab fa-instagram"></i
             ></a>
           </li>
@@ -72,9 +88,8 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.youtube.com" target="_blank" class="youtube"
-              ><i class="fab fa-youtube"></i
-            ></a>
+            <a href="https://www.youtube.com" target="_blank" class="youtube">
+              <i class="fab fa-youtube"></i></a>
           </li>
         </ul>
       </div>
@@ -83,8 +98,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"
       integrity="sha512-u3fPA7V8qQmhBPNT5quvaXVa1mnnLSXUep5PS1qo5NRzHwG19aHmNJnj1Q8hpA/nBWZtZD4r4AX6YOt5ynLN2g=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer">
-    </script>
+      referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
   </body>
 </html>
