--- a/main/index.html
+++ b/main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ByteFlick</title>
+    <meta name="description" content="ByteFlick - Freelance web development, photo & video editing, SEO management, and data analysis services by professionals working in renowned MNCs.">
     <link rel="icon" type="image/x-icon" href="/Images/1.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +22,6 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <!-- <li><a href="#portfolio">Portfolio</a></li> -->
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="home_right">
           <p>Hi Everyone!</p>
-          <h2>We are mainly developers working for renouned MNCs</h2>
+          <h2>We are mainly developers working for renowned MNCs</h2>
           <h2>Started freelancing in the free time</h2>
         </div>
       </div>
@@ -50,7 +50,6 @@
             <li>Photo & Video Editing</li>
             <li>SEO Management</li>
             <li>Data Analysis</li>
-            </ul>
           </ul>
         </div>
         <div class="about_right"></div>
@@ -62,17 +61,17 @@
       <div id="contact" class="contact">
         <div class="our_details">
           <h2>Feel Free to Contact Here 😊</h2>
-          <p><strong>Phone:</strong>+91 1234567890 </p>
-          <p><strong>Email:</strong>byteflick@gmail.com </p>
-          <p><strong>Address:</strong>Kolkata, West Bengal </p>
+          <p><strong>Phone:</strong> +91 1234567890</p>
+          <p><strong>Email:</strong> byteflick@gmail.com</p>
+          <p><strong>Address:</strong> Kolkata, West Bengal</p>
         </div>
         <div class="contact_form">
           <h2>Contact Us here!</h2>
-          <form action="" method="get">
+          <form action="/submit_form" method="post">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required>
-            <label for="mail">Email:</label>
-            <input type="text" name="mail" id="mail" required>
+            <label for="mail">Email</label>
+            <input type="email" name="mail" id="mail" required>
             <label for="msg">Message</label>
             <input type="text" name="msg" id="msg" required>
             <button type="submit">Submit</button>
@@ -87,7 +86,7 @@
         <ul class="social-links">
           <li><a href="https://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
           <li><a href="https://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com"target="_blank"class="instagram"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
         </ul>
