--- a/main/index.html
+++ b/main/index.html
@@ -54,13 +54,40 @@
         </div>
         <div class="about_right"></div>
       </div>
-      <div id="services" class="services">
-        <h2>This is services page</h2>
+      <div class="services" id="services">
+        <h1 class="heading">Our Services</h1>
+        <div class="card-container">
+          <div class="card">
+            <div class="icon">🌐</div>
+            <h3>Web Development</h3>
+            <p>We provide high-quality web development services to bring your ideas to life.</p>
+          </div>
+          <div class="card">
+            <div class="icon">🎨</div>
+            <h3>Graphics Editing</h3>
+            <p>Our graphics editing services ensure your visuals are stunning and professional.</p>
+          </div>
+          <div class="card">
+            <div class="icon">🎥</div>
+            <h3>Videography</h3>
+            <p>Capture your moments perfectly with our professional videography services.</p>
+          </div>
+          <div class="card">
+            <div class="icon">🔍</div>
+            <h3>SEO</h3>
+            <p>Boost your online presence with our expert SEO services.</p>
+          </div>
+          <div class="card">
+            <div class="icon">📊</div>
+            <h3>Data Analysis</h3>
+            <p>Make informed decisions with our comprehensive data analysis services.</p>
+          </div>
+        </div>
       </div>
 
       <div id="contact" class="contact">
         <div class="our_details">
-          <h2>Feel Free to Contact Here 😊</h2>
+          <h2>Connect with us &rarr;</h2>
           <p><strong>Phone:</strong> +91 1234567890</p>
           <p><strong>Email:</strong> byteflick@gmail.com</p>
           <p><strong>Address:</strong> Kolkata, West Bengal</p>
