--- a/main/index.html
+++ b/main/index.html
@@ -25,9 +25,9 @@
     <nav class="nav">
       <ul>
         <li><a href="#home">Home</a></li>
+        <li><a href="#team">Our Team</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -45,8 +45,8 @@
       </div>
     </section>
 
-    <div class="about-section" id="about">
-      <h1>About Us</h1>
+    <div class="about-section" id="team">
+      <h1>Our Team</h1>
       <div class="team-cards">
         <div class="team-member">
           <img src="/Images/Sayantan.png" alt="Rounak">
