--- a/main/index.html
+++ b/main/index.html
@@ -33,13 +33,12 @@
   </header>
 
   <div class="main">
-
     <section id="home" class="home">
       <div class="home_left">
         <img src="/Images/home_img.jpeg" alt="home_image" />
       </div>
       <div class="home_right">
-        <p>Hi Everyone!</p>
+        <h1>Hi Everyone!</h1>
         <h2>We are mainly developers working for renowned MNCs</h2>
         <h2>Started freelancing in the free time</h2>
       </div>
@@ -49,24 +48,55 @@
       <h1>Our Team</h1>
       <div class="team-cards">
         <div class="team-member">
-          <img src="/Images/Sayantan.png" alt="Rounak">
-          <h3>Rounak Jana – Web Developer & Frontend Specialist</h3>
-          <p>With a strong background in both web and frontend development, [Your Name] brings technical expertise and
-            creativity to every project.</p>
+          <div class="card">
+            <div class="card-front">
+              <img src="/Images/Sayantan.png" alt="Rounak">
+              <h3>Rounak Jana – Web Developer & Frontend Specialist</h3>
+              <p>With a strong background in both web and frontend development, Rounak Jana brings technical expertise
+                and creativity to every project.</p>
+            </div>
+            <div class="card-back">
+              <div class="social-icon">
+                <a href="https://twitter.com" target="_blank"><i class="fab fa-x-twitter fa-lg"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
-
         <div class="team-member">
-          <img src="/Images/Sayantan.png" alt="Tias">
-          <h3>Tias Mondal – Data Analyst, Database Manager & Backend Developer</h3>
-          <p>Specializing in data analysis and database management, [Your Name] helps clients turn data into actionable
-            insights and maintain robust data systems.</p>
+          <div class="card">
+            <div class="card-front">
+              <img src="/Images/Sayantan.png" alt="Rounak">
+              <h3>Tias Mondal – Data Analyst, Database Manager & Backend Developer</h3>
+              <p>Specializing in data analysis and database management, Tias Mondal helps clients turn data into
+                actionable insights and maintain robust data systems.</p>
+            </div>
+            <div class="card-back">
+              <div class="social-icon">
+                <a href="https://twitter.com" target="_blank"><i class="fab fa-x-twitter fa-lg"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
-
         <div class="team-member">
-          <img src="/Images/Sayantan.png" alt="Sayantan">
-          <h3>Sayantan Mondal – Editor, Photographer & Content Writer</h3>
-          <p>Combining a keen eye for detail with a passion for visual storytelling, [Your Name] ensures your content is
-            polished and your visuals are captivating.</p>
+          <div class="card">
+            <div class="card-front">
+              <img src="/Images/Sayantan.png" alt="Rounak">
+              <h3>Sayantan Mondal – Editor, Photographer & Content Writer</h3>
+              <p>Combining a keen eye for detail with a passion for visual storytelling, Sayantan Mondal ensures your
+                content is polished and your visuals are captivating.</p>
+            </div>
+            <div class="card-back">
+              <div class="social-icon">
+                <a href="https://twitter.com" target="_blank"><i class="fab fa-x-twitter fa-lg"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -74,27 +104,27 @@
     <section id="services" class="services">
       <h1 class="service-heading">Our Services</h1>
       <div class="card-container">
-        <div class="card">
+        <div class="cards">
           <div class="icon">🌐</div>
           <h3>Web Development</h3>
           <p>We provide high-quality web development services to bring your ideas to life.</p>
         </div>
-        <div class="card">
+        <div class="cards">
           <div class="icon">🎨</div>
           <h3>Graphics Editing</h3>
           <p>Our graphics editing services ensure your visuals are stunning and professional.</p>
         </div>
-        <div class="card">
+        <div class="cards">
           <div class="icon">🎥</div>
           <h3>Videography</h3>
           <p>Capture your moments perfectly with our professional videography services.</p>
         </div>
-        <div class="card">
+        <div class="cards">
           <div class="icon">🔍</div>
           <h3>SEO</h3>
           <p>Boost your online presence with our expert SEO services.</p>
         </div>
-        <div class="card">
+        <div class="cards">
           <div class="icon">📊</div>
           <h3>Data Analysis</h3>
           <p>Make informed decisions with our comprehensive data analysis services.</p>
@@ -103,110 +133,57 @@
     </section>
   </div>
 
-  <!-- <footer>
-    <div class="footer-top">
-
-      <div class="company-details">
-        <h2>Contact Us</h2>
-        <address>
-          251 Baghajatin Place<br>
-          Kolkata, West Bengal<br>
-          Email: byteflick@gmail.com<br>
-          Phone: +1 (123) 456-7890
-        </address>
-        <div class="social-icons">
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-x-twitter"></i>
-          </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </div>
-      </div>
-
-      <div class="contact-form">
-        <form id="contactForm">
-          <input type="text" id="name" name="name" placeholder="Your Name" required>
-          <input type="email" id="email" name="email" placeholder="Your Email" required>
-          <input type="tel" id="phone" name="phone" placeholder="Your Phone" required>
-          <textarea id="message" name="message" rows="4" placeholder="Your message..." required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
-      </div>  
-
-    </div>
-
-    <div class="footer-bottom">
-      <div class="footer-links">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#about">Our Team</a>
-        <a href="#services">Services</a>
-      </div>
-      <p>ByteFlick &#169; 2024 . All rights reserved.</p>
-    </div>
-  </footer> -->
-
-
   <footer>
     <div class="footer-container">
-        <div class="footer-section">
-            <h4>About Us</h4>
-            <p>We are a company that values excellence and innovation.</p>
+      <div class="footer-section">
+        <h4>About Us</h4>
+        <p>We are a company that values excellence and innovation.</p>
+      </div>
+      <div class="footer-section">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#team">Team </a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Follow Us</h4>
+        <div class="social-icons">
+          <a href="#" target="_blank" class="fab fa-facebook-f"></a>
+          <a href="#" target="_blank" class="fab fa-twitter"></a>
+          <a href="#" target="_blank" class="fab fa-instagram"></a>
+          <a href="#" target="_blank" class="fab fa-linkedin-in"></a>
         </div>
-        <div class="footer-section">
-            <h4>Quick Links</h4>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+      </div>
+      <div class="footer-section contact-container">
+        <div class="contact-info">
+          <h4>Our Contact</h4>
+          <p><strong>Location:</strong> 1234 Street Name, City, State, 56789</p>
+          <p><strong>Phone:</strong> (123) 456-7890</p>
+          <p><strong>Email:</strong> byteflick@gmail.com</p>
         </div>
-        <div class="footer-section">
-            <h4>Follow Us</h4>
-            <div class="social-icons">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin-in"></a>
-            </div>
+        <div class="contact-form">
+          <h4 class="contact-form-heading">Contact Us</h4>
+          <form id="contact-form" action="/send" method="POST">
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
+            <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required>
+            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send</button>
+          </form>
+          <p id="form-response"></p>
         </div>
-        <div class="footer-section contact-container">
-            <div class="contact-info">
-                <h4>Our Contact</h4>
-                <p><strong>Location:</strong> 1234 Street Name, City, State, 56789</p>
-                <p><strong>Phone:</strong> (123) 456-7890</p>
-                <p><strong>Email:</strong> byteflick@gmail.com</p>
-            </div>
-            
-            <div class="contact-form">
-                <h4 class="contact-form-heading">Contact Us</h4>
-                <form id="contact-form" action="/send" method="POST">
-                  <input type="text" id="name" name="name" placeholder="Your Name" required>
-                  <input type="email" id="email" name="email" placeholder="Your Email" required>
-                  <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required>
-                  <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                  <button type="submit">Send</button>
-              </form>              
-              <p id="form-response"></p>
-            </div>
-        </div>
+      </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 ByteFlick. All rights reserved.</p>
+      <p> 2024 &copy; ByteFlick. All rights reserved.</p>
     </div>
-</footer>
+  </footer>
 
   <script src="script.js"></script>
   <script src="index.js"></script>
-
 </body>
 
 </html>
